[package]
name = "rs-1010"
version = "0.5.0"
authors = ["Alexey Golubev <dr.freecx@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies.sdl2]
features = ["ttf"]
version = ">=0.34"

[dependencies]
tini = "0.4"
backtrace = ">=0.3"

[build-dependencies]
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = ">=0.1"

[package.metadata.winres]
LegalCopyright = "https://github.com/FreeCX/rs-1010"

[profile.release]
debug = false
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false
