[package]
name = "rs-1010"
version = "1.0.0"
authors = ["Alexey Golubev <dr.freecx@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies.sdl2]
version = "0.35"
features = ["ttf", "mixer"]

[dependencies]
tini = "1.0"
backtrace = "0.3"

[build-dependencies]
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
LegalCopyright = "https://github.com/FreeCX/rs-1010"

[profile.release]
debug = false
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
